Updating storyboard and TransactionAdditionViewController with features of using microphone to record audio for transaction description and convert it into text into the textbox

--- a/EasyBooks/Info.plist
+++ b/EasyBooks/Info.plist
@@ -66,5 +66,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Transcrip input speech</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Record input </string>
 </dict>
 </plist>
